--- a/html-css/arison.html
+++ b/html-css/arison.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arielly Design</title>
+    <title>Ariely Design</title>
     <link rel="stylesheet" href="arison.css">
 </head>
 <body>
 
 <header id="cabeçalho">
-
-<nav id="nav">
-<a class="a" href="">Horários</a>
+<a class="a" href="">Localização</a>
 <a class="a" href="">Produtos</a>
-<a class="a" href="">Endereço</a>
-<a class="a" href="">Resultados</a>
+<a class="a" href="">Contatos</a>
+<a class="a" href="">Promoções</a>
 </nav>
-
 </header>
     
+
 <main id="conteudo">
-    <img src="" alt=""> 
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <div id="div">
+    <h1 id="h1">SORVETES</h1>   
+    <img class="sorvete" src="Ice Cream.png" alt=""> 
+    <img class="sorvete" src="Seja um campeão de vendas com um Carrinho de Açaí - Mafer Equipamentos para Gastronomia.png" alt="">
+    <img class="sorvete" src="Download HD Açaí Em Ondas ♥ - Ultimo Açai Fecha A Porta Transparent PNG Image - NicePNG_com.png" alt="">
+    <img class="sorvete" src="Acai Copo Png - Banner De Açai No Copo _ Full Size PNG Download _ SeekPNG.png" alt="">
+    <img class="sorvete" src="Ice Cream.png" alt="">
+    <img class="sorvete" src="Ice Cream.png" alt=""> 
+    </div>
+
+    
+
+
 </main>
 
 
