--- a/html-css/arison.html
+++ b/html-css/arison.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ariely Design</title>
+    <title>@arison_reisss</title>
     <link rel="stylesheet" href="arison.css">
 </head>
 <body>
 
 <header id="cabeçalho">
-<a class="a" href="">Localização</a>
-<a class="a" href="">Produtos</a>
-<a class="a" href="">Contatos</a>
-<a class="a" href="">Promoções</a>
-</nav>
+    <img  id="logo" src="chiquinho.png" alt="logo">
+    <nav id="nav">
+    <a id="a-header" href="">MENU</a>
+    <a id="a-header" href="">DELIVERY</a>
+    </nav>
+
 </header>
     
-
 <main id="conteudo">
-    <div id="div">
-    <h1 id="h1">SORVETES</h1>   
-    <img class="sorvete" src="Ice Cream.png" alt=""> 
-    <img class="sorvete" src="Seja um campeão de vendas com um Carrinho de Açaí - Mafer Equipamentos para Gastronomia.png" alt="">
-    <img class="sorvete" src="Download HD Açaí Em Ondas ♥ - Ultimo Açai Fecha A Porta Transparent PNG Image - NicePNG_com.png" alt="">
-    <img class="sorvete" src="Acai Copo Png - Banner De Açai No Copo _ Full Size PNG Download _ SeekPNG.png" alt="">
-    <img class="sorvete" src="Ice Cream.png" alt="">
-    <img class="sorvete" src="Ice Cream.png" alt=""> 
-    </div>
+<div id="container">
+    <div id="div-1">
+<div id="p-milkshake">
+   <p id="p-div-1" > MILK</p>
+   <p id="p-div-2" >SHAKE</p>
+</div>
+<img id="img-milkshake" src="Ice Cream.png" alt="/">
 
-    
+
+</div>
+<div id="div-2">
+</div>
+<div id="div-3">
+
+
+</div>
+<div id="div-4">
+
+</div>
+
+
+
 
 
 </main>
