--- a/html-css/arison.html
+++ b/html-css/arison.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,37 +9,19 @@
 </head>
 <body>
 
-<header id="cabeçalho">
-    <img  id="logo" src="chiquinho.png" alt="logo">
-    <nav id="nav">
-    <a id="a-header" href="">MENU</a>
-    <a id="a-header" href="">DELIVERY</a>
-    </nav>
-
+<header>
+    <img id="logo" src="chiquinho.png" alt="logo">
+    <a id="a-header" href="">CARDÁPIO</a>
+    <a id="a-header" href="">ENTREGAS</a>
 </header>
     
-<main id="conteudo">
-<div id="container">
-    <div id="div-1">
-<div id="p-milkshake">
-   <p id="p-div-1" > MILK</p>
-   <p id="p-div-2" >SHAKE</p>
-</div>
-<img id="img-milkshake" src="Ice Cream.png" alt="/">
+    <div id="div-h1-main">
+         <h1> PRODUTOS </h1>
+    </div>
+ 
 
 
-</div>
-<div id="div-2">
-</div>
-<div id="div-3">
-
-
-</div>
-<div id="div-4">
-
-</div>
-
-
+    <main id="main"> 
 
 
 
