--- a/arison.html
+++ b/arison.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en pt-BR">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,31 +10,36 @@
 <body>
 
 <header>
-    <img id="logo" src="chiquinho.png" alt="logo">
-    <a id="a-header" href="">CARDÁPIO</a>
-    <a id="a-header" href="">ENTREGAS</a>
+    <div class="hero">
+ <nav>
+  <img src="planetX-logo.png" class="logo">
+   <ul>
+       <li> <a href="">Home</a></li>
+       <li><a href="https://github.com/arisonreis">Github</a></li>
+       <li><a href="">Contatos</a></li>
+       <li><a href="https://cdn.myportfolio.com/5f38493d38f9b59d0dd58e3b207d3992/2afbb0bc7e4df7008f0a554f_rw_1920.jpg?h=b6dbc29d7d418f9f0154c7b92b144c42">portfolio</a></li>
+   </ul>
+ </nav>
+
+  <h1> O Planeta  <br> Mágico</h1>
+
+ <button type="button"> Explorar A Vida</button>
+ 
+      <div class="indicator">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span class="active"></span>
+      </div>    
+
+<div class="cta">
+   <p id="ctap"> você pode explorar mais sobre este planeta, bem como outros planetas encontrados perto da Terra.</p>
+   <button type="button"> Confira Marte &#x27f6;</button>
+</div>
+
+</div>
 </header>
     
-    <div id="div-h1-main">
-         <h1> PRODUTOS </h1>
-    </div>
- 
-
-
-    <main id="main"> 
-
-
-
-</main>
-
-
-
-
-
-
-
-<footer>
-</footer>
 
 
 
