--- a/hggg.html
+++ b/hggg.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>one project</title>
-    <link rel="stylesheet" href="oneproject.css">
-    <script src="arsn.js"></script>
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>ONE PROJECT</title>
+    <link rel="stylesheet" href="hgg.css">
 </head>
 <body>
- <main>
-    <header id="header">
-        <a id="logo" href="">logo</a> 
-        <nav id="nav">
-        <button aria-label="abrir menu" id="btn-mobile"  aria-haspopup="true" aria-controls="menu" aria-expanded="false">menu
-            <span id="hamburger"></span>
-        </button>
-            <ul id="menu" role="menu">
-                <li><a href="/">Sobre</a></li>
-                <li><a href="/">produtos</a></li>
-                <li><a href="/">portfólio</a></li>
-                <li><a href="/">contato</a></li>
-            </ul>
-        </nav>
-    </header>
+    
+<header id="header">
+
+    <nav id="menu">
+    <ul id="conteudo-menu">
+    <li><a href=""></a> Home</li>
+    <li><a href=""></a> Contato</li>
+    <li><a href=""></a> Github</li>
+    <li><a href=""></a> Localization</li>
+    </ul>
+    </nav>
+
+
+</header>
+
+
+
+
+
+<main>
+
 </main>
 
-        
+
+
+
+
+
+
+
+
+<footer>
+
+</footer>
 
 </body>
 </html>
-
 
 
 
