--- a/projeto-chiquinhos/html-css/estudos.html
+++ b/projeto-chiquinhos/html-css/estudos.html
@@ -7,44 +7,58 @@
     <title> @arison_dev</title>
     <link rel="stylesheet" href="estudos.css">
     <script src="estudos.js"></script>
- <header id="header">
-<nav id="nav">   
-<ul id="ul">
-<li id="li"><a id="a" href=""></a>Localização</li>
-<li id="li"><a id="a" href=""></a>Produtos</li>
-<li id="li"><a id="a" href=""></a>Promoções</li>
-<li id="li"><a id="a" href=""></a>Contatos</li>
-</ul>
-</nav>
-</header>
-<div id="div-logo">
-    <img id="logo" src="chiquinho.png" alt="">
+
+<!--HEADER ABAIXO-->
+<header id="header">
+ <section id="img-h1">
+ <img id="img-header"src="/projeto-chiquinhos/imagens/chiquinho.png" alt="">
  <h1>Chiquinho Sorvetes</h1>
+ </section>
+
+ <nav id="nav-login">
+ <button id="btn1" type="button" onclick="login()">Login</button>
+ </nav>
+
+</header>
+
+
+<div id="div-logo">
+    <nav id="nav">
+        <ul id="ul">
+            <li id="li"><a href=""></a id="a-div">Faça Seu Pedido</li>
+            <li id="li"><a href=""></a id="a-div">Mais Produtos</li>
+            <li id="li"><a href=""></a id="a-div">Contatos</li>
+            <li id="li"><a href=""></a id="a-div">Promoções</li>
+        </ul>
+    </nav>
 </div>
+
+
 <div id="produtos">
     <h2 id="h2-produtos">Cardápio</h2>
-    </div>
+</div>
+<!--HEADER ACIMA-->
 
 
 
+
+<!--CONTEÚDO ABAIXO-->
 <main>
 <section  id="container">
-
 
 <div id="div1">
 <h2 id="p-1">Shake<br> <p id="p-2">Mix</p></h2>
 
-
 <div id="imgs-div">
  <div id="background">
- <img id="img1-div-1"src="shake1.png" alt="">
+ <img id="img1-div-1"src="/projeto-chiquinhos/imagens/shake1.png" alt="">
 </div>
 
 <div id="background2">
- <img id="img2-div-1"src="shake2.png" alt="">
+ <img id="img2-div-1"src="/projeto-chiquinhos/imagens/shake2.png" alt="">
 </div>
 <div id="background3">
- <img id="img3-div-1"src="shake3.png" alt="">
+ <img id="img3-div-1"src="/projeto-chiquinhos/imagens/shake3.png" alt="">
 </div>
 </div>
 
@@ -108,36 +122,9 @@
 </div>
 
 
-
-<div class="div2">
-
-    <div id="inicio-div2">
-      <h2 id="h2-div2">Casquinhas<br>
-    </div>
-   <div id="conteudo-div2">
-       <div id="tradicionais"></div>
-       <div id="caldaquente"></div>
-       <div id="especiais"></div>
-       <div id="trufados"></div>
-   </div>
-
-    
-
-
-</div>
-
-
-
-
-
-
-
-<div class="div3">   
-</div>
-
-</section>
+</section> 
 </main>
-
+<!-- CONTEÚDO ACIMA -->
 
 
 
